--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,10 @@
+*{
+  margin: 0;
+  padding: 0;
+  font-family: 'Poppins', sans-serif;
+  box-sizing: border-box;
+
+}
 .App {
   text-align: center;
 }
